tests/snapshots/s3_swap_view__view_cheques_sort_descending_with_never_at_bottom.snap
---
source: tests/s3_swap_view.rs
expression: view
---
SwapView {
    card: ChequebookCard {
        status: Healthy,
        total: "BZZ 10.0000",
        available: "BZZ 8.0000",
        available_pct: 80,
        why: None,
    },
    chequebook_address: None,
    cheques: [
        CheckRow {
            peer_short: "cccccc…cccc",
            payout: "BZZ 1.5000",
            never: false,
        },
        CheckRow {
            peer_short: "dddddd…dddd",
            payout: "BZZ 0.7000",
            never: false,
        },
        CheckRow {
            peer_short: "aaaaaa…aaaa",
            payout: "BZZ 0.3000",
            never: false,
        },
        CheckRow {
            peer_short: "bbbbbb…bbbb",
            payout: "—",
            never: true,
        },
    ],
    settlements: [],
    time_total_received: None,
    time_total_sent: None,
}
