tests/snapshots/s3_swap_view__view_empty_snapshot.snap
---
source: tests/s3_swap_view.rs
expression: view
---
SwapView {
    card: ChequebookCard {
        status: Unknown,
        total: "—",
        available: "—",
        available_pct: 0,
        why: Some(
            "/chequebook/balance not available yet",
        ),
    },
    chequebook_address: None,
    cheques: [],
    settlements: [],
    time_total_received: None,
    time_total_sent: None,
}
