tests/snapshots/s3_swap_view__view_healthy_chequebook.snap
---
source: tests/s3_swap_view.rs
expression: view
---
SwapView {
    card: ChequebookCard {
        status: Healthy,
        total: "BZZ 10.0000",
        available: "BZZ 8.0000",
        available_pct: 80,
        why: None,
    },
    chequebook_address: None,
    cheques: [],
    settlements: [],
    time_total_received: None,
    time_total_sent: None,
}
