tests/snapshots/s3_swap_view__view_settlements_with_flagged_peer.snap
---
source: tests/s3_swap_view.rs
expression: view
---
SwapView {
    card: ChequebookCard {
        status: Healthy,
        total: "BZZ 10.0000",
        available: "BZZ 8.0000",
        available_pct: 80,
        why: None,
    },
    chequebook_address: None,
    cheques: [],
    settlements: [
        SettlementRow {
            peer_short: "bbbbbb…bbbb",
            received: "BZZ 2.0000",
            sent: "BZZ 0.5000",
            net: "+BZZ 1.5000",
            net_flagged: true,
        },
        SettlementRow {
            peer_short: "cccccc…cccc",
            received: "BZZ 0.2000",
            sent: "BZZ 1.0000",
            net: "-BZZ 0.8000",
            net_flagged: true,
        },
        SettlementRow {
            peer_short: "aaaaaa…aaaa",
            received: "BZZ 0.3000",
            sent: "BZZ 0.2000",
            net: "+BZZ 0.1000",
            net_flagged: false,
        },
    ],
    time_total_received: None,
    time_total_sent: None,
    market: None,
}
