tests/snapshots/s3_swap_view__view_tight_chequebook.snap
---
source: tests/s3_swap_view.rs
expression: view
---
SwapView {
    card: ChequebookCard {
        status: Tight,
        total: "BZZ 10.0000",
        available: "BZZ 1.0000",
        available_pct: 10,
        why: Some(
            "only 10% available — most BZZ is tied up in unsettled debt.",
        ),
    },
    chequebook_address: None,
    cheques: [],
    settlements: [],
    time_total_received: None,
    time_total_sent: None,
}
